[package]
name = "adversembly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.23.0", optional = true }
eframe = { version = "0.23.0", optional = true }
primitive_enum = "1.1.1"
smol = "1.3.0"
egui_extras = { version = "0.23.0", optional = true }

[features]
default = ["widget", "app"]
app = ["eframe", "widget"]
widget = ["egui", "egui_extras"]
