[package]
name = "adversembly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.23.0", optional = true }
eframe = { version = "0.23.0", optional = true }
primitive_enum = "1.1.1"
egui_extras = { version = "0.23.0", optional = true }
clap = { version = "4.4.8", features = ["derive"], optional = true }

[features]
default = ["widget", "app"]
app = ["eframe", "widget", "clap"]
widget = ["egui", "egui_extras"]
